# car-re-cog

./: README.md  pyproject.toml  requirements.txt  test.sh
src/car_recog/: __init__.py  main.ipynb
